...
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="phone" translatesAutoresizingMaskIntoConstraints="NO" id="PGG-wu-ENZ">
                                        <rect key="frame" x="0.0" y="2.6666666666666572" width="45" height="45"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="PGG-wu-ENZ" secondAttribute="height" id="XAT-ch-vkI"/>
                                        </constraints>
                                    </imageView>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Phone number" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="hVN-3U-Opw">
                                        <rect key="frame" x="45" y="2.6666666666666572" width="309" height="45"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="9Qb-hx-qua"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="phonePad" returnKeyType="continue"/>
...
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="password" translatesAutoresizingMaskIntoConstraints="NO" id="5ou-hH-oVM">
                                        <rect key="frame" x="0.0" y="2.6666666666666572" width="45" height="45"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="5ou-hH-oVM" secondAttribute="height" id="yx5-g7-u0y"/>
                                        </constraints>
                                    </imageView>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="nBr-N3-WAj">
                                        <rect key="frame" x="45" y="2.6666666666666572" width="309" height="45"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES" textContentType="password"/>
                                    </textField>
                                </subviews>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AHL-Db-VTK">
                                <rect key="frame" x="30" y="344" width="354" height="48"/>
                                <color key="backgroundColor" name="PrimaryColor"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="log in">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="10"/>
                                    </userDefinedRuntimeAttribute>
...
